// Copyright (c) 2015, Google, Inc.  All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package tao;

message DomainDetails {
  optional string name = 1;
  optional string policy_keys_path = 2;
  optional string guard_type = 3;
  optional string guard_network = 4;
  optional string guard_address = 5;
  optional int64 guard_ttl = 6;
}

message X509Details {
  optional string common_name = 1;
  optional string country = 2;
  optional string state = 3;
  optional string organization = 4;
  optional string organizational_unit = 5;
  optional int32 serial_number = 6;
}

message ACLGuardDetails {
  optional string signed_acls_path = 1;
}

message DatalogGuardDetails {
  optional string signed_rules_path = 2;
}

message TPMDetails {
  optional string tpm_path = 1;
  optional string aik_path = 2;

  // A string representing the IDs of PCRs, like "17,18".
  optional string pcrs = 3;
}

message DomainConfig {
  optional DomainDetails domain_info = 1;
  optional X509Details x509_info = 2;
  optional ACLGuardDetails acl_guard_info = 3;
  optional DatalogGuardDetails datalog_guard_info = 4;
  optional TPMDetails tpm_info = 5;
}

message DomainTemplate {
  optional DomainConfig config = 1;
  repeated string datalog_rules = 2;
  repeated string acl_rules = 3;

  // The name of the host (used for policy statements)
  optional string host_name = 4;
  optional string host_predicate_name = 5;
  // Program names (as paths to binaries)
  repeated string program_paths = 6;
  optional string program_predicate_name = 7;
  // Container names (as paths to images)
  repeated string container_paths = 8;
  optional string container_predicate_name = 9;
  // VM names (as paths to images)
  repeated string vm_paths = 10;
  optional string vm_predicate_name = 11;
  // LinuxHost names (as paths to images)
  repeated string linux_host_paths = 12;
  optional string linux_host_predicate_name = 13;
  // The name of the predicate to use for trusted guards.
  optional string guard_predicate_name = 14;
  // The name of the predicate to use for trusted TPMs.
  optional string tpm_predicate_name = 15;
  // The name of the predicate to use for trusted OSs.
  optional string os_predicate_name = 16;
}
